# check-config-rule-s3-lifecycle

./: README.md  handler.py  parameters.yml.example  pyproject.toml  serverless.yml
tests/: test_handler.py
tests/jsons/: compliant_s3_bucket.json  deleted_s3_bucket.json  missing_lifecycle_s3_bucket.json  no_versioning_s3_bucket.json  wrong_resource_type.json
